--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 			<div class="row centered">
 				<div class="col-lg-7">
 					<h1>Ian Chuck-Yin</h1>
-					<h3>Bumbaclot Mon | ichuckyi@uwaterloo.ca</h3>
+					<h3>Aspiring Developer | ichuckyi@uwaterloo.ca</h3>
 				</div><!--/.col-lg-12 -->
 			</div><!--/.row -->
 		</div><!--/.container -->
@@ -228,7 +228,7 @@
 
 	<section id="work" name="work"></section>
 	<!--PORTFOLIO DESCRIPTION -->
-	<div class="container desc">
+<!--	<div class="container desc">
 		<div class="row">
 				<div class="col-lg-2 col-lg-offset-1">
 					<h5>PROJECTS</h5>
@@ -262,10 +262,10 @@
 						<sm><i class="icon-tag"></i> web design</sm></more> 
 					</p>
 				</div>
-		
+
 		</div><!--/.row -->
-		<br>
-		<br>
+<!--		<br>
+		<br>-->
 	</div><!--/.container -->
 	<div id="skillswrap">
 		<div class="container">
